data/derived/fa15/progs/unify/prog0424.ml.out
Characters 267-270:
  List.map combine (List.rev(List.combine l1 l2)) @ [0,0] in
                                                     ^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type int
